# notebook

./: .gitignore  Cannot insert a Tensor that requires grad as a constant.md  LICENSE  NvidiaCuda初级教程(B站).docx  README.md  cpp基础.md  cuda_learn.md  deterministic & benchmark.md  leetcodeNote.md  virtual析构函数.md
Datasets/: Untitled 2.odt
Literatur/: mmcv环境配置.md  resnet_阅读笔记.md  transformer.md
bug记录/: onnx.ModelProto_has_no_field_named_version.md
cmake/: install.md  set_marcro.md  常见宏及命令说明.md  设置输出路径.md
cmake/combin_shared_libs/: CMakeLists.txt  动态库连接是否会传递.md
cmake/combin_shared_libs/src/: aaa.cpp  bbb.cpp  bbb.h
cmake/combin_static_libs/: CMakeLists.txt  静态库连接.md
cmake/combin_static_libs/src/: ccc.cpp  main.cpp
cmake/with_bash_compile/: CMakeLists.txt  build.bash  main.cpp
cpp/: build_project.md  cpp_指针_初始化问题.md  cpp基础.md  cpp学习路线.md  how_to_use_glog.md  抽象类写法.md  明确拒绝不想使用的编译器自动生成的函数.md  添加jsoncpp.md  编译器会自动生成的函数.md
cpp/link_share_lib/: CMakeLists.txt
cpp/link_share_lib/src/: aaa.h  ccc.h
cuda/: cuda_learn.md
git/: .~lock.gitlab中mergerequest工作流程.docx#  combine_commit_msg.md  gitlab中mergerequest工作流程.docx
pcd/: 基础.md
pytorch/: add_cunstmed_ops.md  add_plugin_py.md  dim理解.md  onnx_Tracing_vs_Scripting.md  onnx_add_unsupported_ops.md  read_write_tensor.md  变量类型.md  增加自定义torchscript算子.md  编译与库相关.md
pytorch/src/: onnx_customed_relu_pt151.py  onnx_graph.py  test_pytorch_common.py  xxx.py
ros/: catkin基础.md  installation.md
set_env/: conda安装gpu版本pytorch.md  docker_install.md  docker_install.txt  docker基本操作.md  pai_env_setup.md  vscode_dev_setup.md  vscode远程ssh.md  多版本cuda安装.odt
tensorrt/: createNetwork.md  infer.md  onnxbuildmodel.md
ubuntu/: terminator_error.md  挂载新硬盘.md
